--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "address-helper",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://weixuefeng.github.io/address-helper/",
+  "homepage": "./",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
